--- a/mod2_solution/style.css
+++ b/mod2_solution/style.css
@@ -67,13 +67,14 @@ div.heading {
 /* Simple Responsive Framework. */
 .row {
 	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 float: left;
-height: 250px;
 margin: 5px;
 border: 1px solid black;
 
